--- a/src/app/ma_vendedora/componets/comercializacion/comercializacion.component.html
+++ b/src/app/ma_vendedora/componets/comercializacion/comercializacion.component.html
@@ -1,3 +1,5 @@
-<ion-card style="width: 97%; height: 575px;">
-  <app-googlemaps [feature] = "feature"></app-googlemaps>
-</ion-card>
+<div class="center">
+  <ion-card style="width: 282px; height: 410px">
+    <app-googlemaps [feature] = "feature"></app-googlemaps>
+  </ion-card>
+</div>
