--- a/src/app/ma_vendedora/componets/noticias/noticias.component.html
+++ b/src/app/ma_vendedora/componets/noticias/noticias.component.html
@@ -1,3 +1,10 @@
-<ion-card style="width: 97%; height: 575px;">
+<!-- <ion-card style="width: 97%; height: 575px;">
   <app-googlemaps [modal]="modal"  [feature] = "feature"></app-googlemaps>
-</ion-card>
+</ion-card> -->
+
+<div class="center">
+  <ion-card style="width: 282px; height: 410px">
+    <app-googlemaps  [modal]="modal"  [feature] = "feature"></app-googlemaps>
+  </ion-card>
+  </div>
+  
