--- a/src/app/ma_vendedora/componets/notificaciones/notificaciones.component.html
+++ b/src/app/ma_vendedora/componets/notificaciones/notificaciones.component.html
@@ -1,3 +1,9 @@
-<ion-card style="width: 97%; height: 600px;">
+<!-- <ion-card style="width: 97%; height: 600px;">
   <app-googlemaps [feature] = "feature" [modal]="modal"></app-googlemaps>
-</ion-card>
+</ion-card> -->
+
+<div class="center">
+  <ion-card style="width: 282px; height: 410px">
+    <app-googlemaps [feature] = "feature" [modal]="modal"></app-googlemaps>
+  </ion-card>
+</div>
