--- a/src/app/ma_vendedora/componets/agricultoras/agricultoras.component.scss
+++ b/src/app/ma_vendedora/componets/agricultoras/agricultoras.component.scss
@@ -1,16 +1,43 @@
 
-ion-card-header.card-header{
+.contenedor-personas {
+    width: 100%;
+    height: 90%;
+
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+
+}
+
+.card {
+    cursor: pointer;
+    margin: 5px;
+    width: 200px;
+    height: 350px;
+    border: 3px;
+}
+
+.card:hover{
     background: var(--warmin-color-yellow);
-    
+    border-radius: 25% 10% 0 0;
 }
 
-ion-card-content.card-content{
-    background: var(--warmin-color-orange);
+.imagen-card {    
+    border-radius: 25% 10%;
 }
 
-ion-card.card-p{
-    border: 5px;
-    border-style: solid;
-    border-radius: 5px;
-    border-color: #fff;
+.detalle-personal {
+    margin: 0;
+    width: 200px;
+    height: 210px;
+    background: rgba(255, 255, 255, 0.800);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;    
+}
+
+.texto-personal {   
+    text-align: center;
+    margin: 3px;
 }
