--- a/src/app/ma_vendedora/componets/compartido/compartido.component.html
+++ b/src/app/ma_vendedora/componets/compartido/compartido.component.html
@@ -1,5 +1,5 @@
 <!-- <ion-searchbar placeholder="Buscar" class="search-bar-orange" value=""></ion-searchbar> -->
-<div class="container-search-bar">
+<!-- <div class="container-search-bar">
   <div class="size-search-bar">
     <ion-searchbar placeholder="Buscar" class="search-bar-orange" showCancelButton="never"></ion-searchbar>
   </div>
@@ -20,4 +20,25 @@
   </ion-item>
 
 
+</ion-card> -->
+<div class="contenedor-busqueda">
+  <div class="search">
+    <ion-searchbar class="busqueda" placeholder="Buscar ..."  showCancelButton="never"></ion-searchbar>
+  </div>    
+</div>
+
+<ion-card>
+  <ion-item *ngFor="let shared of shareds" style="font-size: 12px;" (click)="gotoProfile(shared.id)">
+    <ion-chip slot="end" color="success">{{shared.status}}</ion-chip>
+    <ion-thumbnail slot="start">
+      <img alt="Silhouette of mountains" src="https://ionicframework.com/docs/demos/api/thumbnail/thumbnail.svg" />
+    </ion-thumbnail>
+
+    <ion-label>
+      <div class="text-bold text-color-brown">{{shared.users_id}}</div>
+      <div class="text-color-purple">{{shared.name}}</div>
+      <div class="text-color-purple">{{shared.meeting_point}}</div>      
+      <div class="text-bold text-color-pinkd">{{shared.date}} - {{shared.hour}}</div>
+    </ion-label>
+  </ion-item>
 </ion-card>
