--- a/src/app/c_camioneta/tab-inicio/tab-inicio.page.html
+++ b/src/app/c_camioneta/tab-inicio/tab-inicio.page.html
@@ -1,9 +1,3 @@
-<!-- <ion-header>
-  <ion-toolbar>
-    <ion-title>Movilidad</ion-title>
-  </ion-toolbar>
-</ion-header> -->
-
 <ion-content>
   <div class="border-top-page">
     <!-- Contenedor 1 -->
@@ -14,12 +8,10 @@
     </div>    
   </div>
   <ion-card class="titulo-fondo ion-margin">
-    <h4>Novedades 12/08/2022</h4>
+    <h4>Novedades {{fecha}}</h4>
+  </ion-card>
+  <ion-card style="width: 97%; height: 575px;">
+    <app-googlemaps [modal]="modal"  [feature] = "feature"></app-googlemaps>
   </ion-card>
   
-  <ion-searchbar class="ion-padding" placeholder="Buscar" showCancelButton="never"></ion-searchbar>
-  
-  <ion-card class="map">
-    <capacitor-google-maps id="map"></capacitor-google-maps>
-  </ion-card>
 </ion-content>
