--- a/src/app/c_privado/tab_inicio/inicio/inicio.page.html
+++ b/src/app/c_privado/tab_inicio/inicio/inicio.page.html
@@ -13,9 +13,7 @@
       <div class="texto-header">Movilidad de la vendedora</div>
     </div>
   </div>
-  <ion-card style="width: 95%; height: 95%;">
-    <app-googlemaps [feature]="feature"></app-googlemaps>
-
+  <ion-card style="width: 95%; height: 70%;">
+    <app-googlemaps [modal]="modal" [localizacion]="localizacion" [feature]="feature"></app-googlemaps>
   </ion-card>
-
 </ion-content>
