--- a/src/app/c_privado/tab_noticias/novedades/novedades.page.html
+++ b/src/app/c_privado/tab_noticias/novedades/novedades.page.html
@@ -14,11 +14,10 @@
     </div>    
   </div>
   <ion-card class="titulo-fondo ion-margin">
-    <h4>12/08/2022</h4>
+    <h4>{{fecha}}</h4>
   </ion-card>
-  
-  <ion-searchbar class="ion-padding" placeholder="Buscar" showCancelButton="never"></ion-searchbar>
-  <ion-card class="map">
-    <capacitor-google-maps id="map"></capacitor-google-maps>
+
+  <ion-card style="width: 97%; height: 575px;">
+    <app-googlemaps [modal]="modal"  [feature] = "feature"></app-googlemaps>
   </ion-card>
 </ion-content>
