--- a/src/app/ma_vendedora/tab-inicio/tab-inicio.page.html
+++ b/src/app/ma_vendedora/tab-inicio/tab-inicio.page.html
@@ -17,6 +17,6 @@
     <h5>Muestra la información de las paradas del transporte público</h5>
   </ion-item-divider> -->
   <ion-card style="width: 97%; height: 80%;">
-    <app-googlemaps [feature] = "feature"></app-googlemaps>
+    <app-googlemaps [modal]="modal" [feature] = "feature"></app-googlemaps>
   </ion-card>
 </ion-content>
