--- a/src/app/c_bus/tab-inicio/tab-inicio.page.html
+++ b/src/app/c_bus/tab-inicio/tab-inicio.page.html
@@ -14,7 +14,7 @@
     </div>    
   </div>
   <ion-card class="titulo-fondo ion-margin">
-    <h4>Novedades 12/08/2022</h4>
+    <h4>Novedades {{fecha}}</h4>
   </ion-card>
   
   <!-- <ion-searchbar class="ion-padding" placeholder="Buscar" showCancelButton="never"></ion-searchbar> -->
