--- a/src/app/c_camioneta/geolocalizacion/geolocalizacion.page.html
+++ b/src/app/c_camioneta/geolocalizacion/geolocalizacion.page.html
@@ -1,9 +1,3 @@
-<!-- <ion-header>
-  <ion-toolbar>
-    <ion-title>Geolocalización</ion-title>
-  </ion-toolbar>
-</ion-header> -->
-
 <ion-content>
   <div class="border-top-page">
     <!-- Contenedor 1 -->
@@ -15,22 +9,68 @@
     <!-- Contenedor 2 -->
     <div class="contenedor-title">
       <div>
-        <h4 class="text-center size-text35px text-bold text-color-purple">Indica en el mapa la ubicación de la parada
-        </h4>
+        <h4 class="text-center size-text35px text-bold text-color-purple">Indica en el mapa la ubicación de la
+          parada</h4>
       </div>
     </div>
   </div>
-  <!-- <ion-item-divider class="ion-margin" style="text-align: center; color: black;">
-  <h4>Indica en el mapa la ubicación de la parada</h4>
+  <!-- <ion-item-divider style="text-align: center; color: black;">
+  <h4>Indica en el mapa la ubicación de la asociación</h4>
 </ion-item-divider> -->
-  <div class="container-search-bar">
-    <div class="size-search-bar">
-      <ion-searchbar class="search-bar-orange" placeholder="Buscar" showCancelButton="never"></ion-searchbar>
-    </div>
-  </div>
-  <ion-card class="map">
-    <capacitor-google-maps id="map"></capacitor-google-maps>
+  <ion-card style="width: 97%; height: 80%;">
+    <app-googlemaps [localizacion]="localizacion" [feature] = "feature" (enviar)="recibirData($event)"></app-googlemaps>
   </ion-card>
-  <ion-button (click)="registraParada()" class="boton-warmi-in" expand="block"> &nbsp; &nbsp;Continuar</ion-button>
+  <ion-button class="boton-warmi-in" id="open-modal" expand="block">Continuar</ion-button>
+  
+  <!-- Modal -->
+
+  <ion-modal #modal trigger="open-modal" [presentingElement]="presentingElement">
+    <ng-template>
+      <ion-header>
+        <ion-toolbar>
+        
+          <ion-buttons slot="end">
+            <ion-button (click)="modal.dismiss()">Cancelar</ion-button>
+          </ion-buttons>
+        </ion-toolbar>
+      </ion-header>
+      
+      <div class="border-top-page">
+        <!-- Contenedor 1 -->
+        <div class="contenedor-header">
+          <ion-icon class="icon-header size-icon" slot="start" src="/assets/icon/store.svg">
+          </ion-icon>
+          <div class="texto-header">Camioneta</div>
+        </div>
+      </div>
+      <ion-content>
+          <br>
+          <h4 class="text-center size-text35px text-bold text-color-purple">Ingresa los datos requeridos</h4>
+          <form>
+        <ion-list>
+          <ion-card>  
+            <ion-item>
+              <ion-label position="stacked">Placa:</ion-label>
+              <ion-input [(ngModel)]="car_plate" name="car_plate"></ion-input>
+            </ion-item>
+            <ion-item>
+              <ion-label position="stacked">Descripción:</ion-label>
+              <ion-input [(ngModel)]="description" name="description"></ion-input>
+            </ion-item>
+            <ion-item>
+              <ion-label position="stacked">Color:</ion-label>
+              <ion-input [(ngModel)]="color" name="color"></ion-input>
+            </ion-item>
+        
+          </ion-card>
+
+        </ion-list>   
+
+          <ion-button type="submit" expand="block" class="boton-warmi-in" (click)="guardarCamioneta()"><ion-icon name="card-outline"></ion-icon> &nbsp; &nbsp;Guardar</ion-button>
+        
+      </form>
+      </ion-content>
+    </ng-template>
+  </ion-modal>
 
 </ion-content>
