--- a/src/app/c_privado/tab_inicio/perfil-ma/perfil-ma.page.html
+++ b/src/app/c_privado/tab_inicio/perfil-ma/perfil-ma.page.html
@@ -1,59 +1,85 @@
-<!-- <ion-header>
-  <ion-toolbar>
-    <ion-title>Perfil mujer agricultora</ion-title>
-  </ion-toolbar>
-</ion-header> -->
-
 <ion-content>
   <div class="border-top-page">
-    <!-- Contenedor 1 -->
-    <div class="contenedor-header">
-      <ion-icon class="icon-header size-icon" slot="start" src="/assets/icon/ubication.svg">
-      </ion-icon>
-      <div class="texto-header">Perfil mujer agricultora</div>
-    </div>    
+    <div class="contenedor-header-icon">
+      <!-- Contenedor 1 -->
+      <div class="contenedor-header-config">
+        <ion-icon class="icon-header size-icon" slot="start" src="/assets/icon/agricultor.svg">
+        </ion-icon>
+        <div class="texto-header">Perfil mujer agricultora</div>
+      </div>
+    </div>
+    <!-- Boton Editar Perfil -->
+   <!--  <div class="icon-end">
+      <ion-button (click)="onClick()" class="boton-warmi-in">
+        <ion-icon slot="icon-only" src="assets/icon/update_date.svg"></ion-icon>
+      </ion-button>
+    </div> -->
   </div>
-  <ion-card style="border-radius:20px; text-align: center;">
-    <img width="125" src="assets/img/comprador.jpg" />
-    <ion-card-header>
-      <ion-card-title>María Perez</ion-card-title>
-      <ion-card-subtitle>Venta de productos frescos</ion-card-subtitle>
-     </ion-card-header>
-    <ion-card-content>
-      099335589
-    </ion-card-content>
-    <form [formGroup]="form">      
-      <div class="cont">
-          <div class="stars">
-            <ngx-star-rating formControlName="rating" [id]="'rating'" [disabled] ="true"></ngx-star-rating>
+  <!-- Dato 1 -->
+  <div class="datos-personales">
+    <div class="imagen-buttom">
+      <img class="img-profile" src="{{foto || 'assets/img/comprador.jpg'}}" />
+      <a class="imagen-in-buttom" href="http://">
+        <ion-icon slot="start" src="assets/iconos/camera.svg" class="size-icon-camera"></ion-icon>
+      </a>
+    </div>
+    <div>
+      <ion-card-header>
+        <ion-card-title class="text-color-purple text-bold"> {{name}}</ion-card-title>
+        <ion-card-subtitle>Venta de productos frescos</ion-card-subtitle>
+      </ion-card-header>
+      <ion-card-content>
+        <div class="text-bold text-color-brown">Id:</div>
+        <div class="text-color-purple">{{identification_card}}</div>
+        <!--  -->
+        <div class="text-bold text-color-brown">Teléfono:</div>
+        <div class="text-color-purple">{{phone}}</div>
+      </ion-card-content>
+    </div>
+  </div>
+  <!-- Descripcion y start -->
+  <div class="padding-profile-desc">
+    <div class="contenedor-descripcion">
+      <div class="text-color-purple">Venta de productos frescos</div>
+    </div>
+    <div>
+      <div class="ion-text-left text-bold text-color-brown">Calificación</div>
+      <div>
+        <form [formGroup]="form">
+          <div class="cont">
+            <div class="stars">
+              <ngx-star-rating formControlName="rating" [id]="'rating'" [disabled]="true"></ngx-star-rating>
+            </div>
           </div>
-        </div>
-  </form>
-  
+        </form>
+      </div>
+    </div>
+  </div>
+  <!--  -->
+  <ion-card style="width: 98%; height: 30%;">
+    <app-googlemaps [buscador]="buscador" [miUbicacion]="miUbicacion" [feature]="feature"></app-googlemaps>
   </ion-card>
-  <div class="ion-padding">
-  <ion-row>
-    <ion-col style="margin-top: 8px;">
-      <ion-label >Selecciona el lugar</ion-label> 
-    </ion-col>
-    <ion-col>
-      
-          <ion-select interface="popover">
-            <ion-select-option value="apples">Huertos familiares</ion-select-option>
-            <ion-select-option value="oranges">Puntos de venta</ion-select-option>
-          </ion-select>
-      
-    </ion-col>
-  </ion-row>
-</div>
-<ion-card class="map">
-  <capacitor-google-maps id="map"></capacitor-google-maps>
-  
-</ion-card>
-<ion-card class="ion-padding">
-  <ion-card-title>08:00 -- 17:00</ion-card-title>
-  <ion-card-subtitle>Lunes, martes, jueves</ion-card-subtitle>
-</ion-card>
-<ion-button class="ion-padding" expand="full" style="--background: #50CD89;">Contactar</ion-button>
+
+  <div class="contenedor-list-ventas" id="contenedor-list-ventas">
+    <ion-card class="contenedor-card-p">
+      <!-- <ion-card *ngFor="let product of products" class="contenedor-card-p"> -->
+      <ion-card-header class="encabezado-card">
+        <ion-card-title class="text-white text-bold">Horario</ion-card-title>
+      </ion-card-header>
+      <ion-card-content class="descripcion-card">
+        <div class="text-color-purple">08:00 -- 17:00</div>
+        <div class="text-color-purple">Lunes, martes, jueves</div>
+      </ion-card-content>
+    </ion-card>
+  </div>
+  <!-- 
+  <ion-card class="ion-padding">
+    <ion-card-title>08:00 -- 17:00</ion-card-title>
+    <ion-card-subtitle>Lunes, martes, jueves</ion-card-subtitle>
+  </ion-card> -->
+  <div class="btn-ordenar">
+    <ion-button class="ion-padding" expand="full" style="--background: #50CD89;"><ion-icon name="logo-whatsapp"></ion-icon> <a href="https://wa.me/593{{phoneNumber}}" style="color: whitesmoke;"> &nbsp;&nbsp; Contactar</a></ion-button>
+
+  </div>
 </ion-content>
 
