--- a/src/app/c_privado/tab_inicio/perfil-ma/perfil-ma.page.scss
+++ b/src/app/c_privado/tab_inicio/perfil-ma/perfil-ma.page.scss
@@ -1,23 +1,113 @@
-.cont {
-    width: 93%;
-    max-width: 350px;
-    text-align: right;
-    color: #EEE;
-    overflow: hidden;
-  }
-  
-  div.stars {
-    width: 270px;
-    display: inline-block;
-  }
- 
+.contenedor-header-icon {
+  display: flex;
+  flex-direction: row;
+  width: auto;
+  padding: 0;
+  margin: 0;
+}
 
-  capacitor-google-maps {
-    display: inline-block;
-    width: 100%;
-    height: 100%;
-  }
-.map{
-    height: 35%;
-    width: 95%;
+.contenedor-header-config {
+  display: flex;
+  background-color: var(--warmin-color-orange);
+  border-end-end-radius: 50px;
+  border-start-end-radius: 50px;
+  width: 60%;
+  height: 40px;
+  align-items: center;
+}
+.ion-text-end{
+--margin: 2px;
+}
+.icon-end {
+  text-align: end;
+  margin-right: 40px;
+}
+
+.datos-personales {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  margin-top: 4px;
+}
+
+.padding-profile {
+  display: flex;
+  padding-top: 10px;
+  width: 100%;   
+}
+.padding-profile-desc{
+  display: flex;
+  padding-top: 10px;
+  width: 100%;  
+  min-width: 100%;   
+}
+
+.img-profile {
+  width: 180px;
+  height: 100px;
+  min-height: 100%;
+  min-width: 100%;
+  margin-inline-start: 4px;
+  border-radius: 10px;
+}
+
+.imagen-buttom {
+  display: inline-block;
+  position: relative;
+}
+
+.imagen-in-buttom {
+  width: 40px;
+  height: 40px;
+  position: absolute;
+  bottom: 0.5em;
+  right: 0.5em;
+  background-color: var(--warmin-color-orange);
+  border-radius: 50px;
+  color: white;
+}
+
+.size-icon-camera {
+  width: 40px;
+  height: 40px;
+}
+
+// descripcion
+
+.contenedor-descripcion{
+  width: 50%;  
+  padding: 4px 10px 4px 10px;
+  text-align: justify;
+}
+
+// 
+
+.cont {
+  width: 100%;
+  max-width: 350px;
+  text-align: right;
+  color: #EEE;
+  overflow: hidden;
+}
+
+div.stars {
+  width: 270px;
+  display: inline-block;
+}
+
+capacitor-google-maps {
+  display: inline-block;
+  width: 100%;
+  height: 100%;
+}
+
+.map {
+  height: 35%;
+  width: 95%;
+}
+
+.btn-ordenar{
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
